# py2exe-example

./: pyproject.toml
console/: example.py  setup.py
gui/: example.py  setup.py
