[tool.poetry]
name = "py2exe-example"
version = "0.1.0"
description = ""
authors = ["Hiroaki Kataoka <k_hir@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
py2exe = "^0.13.0.2"
wxpython = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
